[package]
name = "DRL"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
rand_distr = "0.4"
crossterm = { version = "0.28", features = ["use-dev-tty"] }
rand_xoshiro = "0.6.0"
burn = { version = "0.17.0", features = ["autodiff", "tch"] }
tch = { version = "0.19.0", features = ["download-libtorch"] }
kdam = "0.6.2"


[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "debug"
path = "src/bin/debug.rs"